--- a/src/Manassa/Windows/Viewers/AnalysisView.xaml
+++ b/src/Manassa/Windows/Viewers/AnalysisView.xaml
@@ -100,6 +100,7 @@
                 >                
                 <windows:MassTagViewer
                     x:Name="m_massTagViewer"
+                    UseDriftTime="{Binding Path=UsesDriftTime, NotifyOnSourceUpdated=True}"
                     />
             </TabItem>
             <TabItem
