--- a/src/ElutionProfileTool/MainWindow.xaml
+++ b/src/ElutionProfileTool/MainWindow.xaml
@@ -64,21 +64,21 @@
             <Button
                 Content="Ideal - 0"
                 HorizontalAlignment="Stretch"
-                Height="128"
+                Height="100"
                 Width="256"
                 Click="ideaButton_Click"     
                 Name="ideaButton" FontSize="28" />
             <Button
                 Content="Good - 1"
                 HorizontalAlignment="Stretch"
-                Height="128"
+                Height="100"
                 Width="256"
                 Click="goodOneButton_Click" 
                 Name="goodOneButton" FontSize="28" />
             <Button
                 Margin="5,5,5,5"
                 Content="Ok - 2"
-                Height="128"
+                Height="100"
                 Width="256"
                 Click="okButton_Click"  
                 HorizontalAlignment="Stretch"
@@ -86,15 +86,15 @@
             <Button
                 Margin="5,5,5,5"
                 Content="Poor- 3"
-                Height="128"
+                Height="100"
                 Width="256"
                 Click="badButton_Click" 
                 HorizontalAlignment="Stretch"
                 Name="badButton" FontSize="28" />
             <Button
                 Margin="5,5,5,5"
-                Content="Bad - 4"
-                Height="128"
+                Content="Failed - 4"
+                Height="100"
                 Width="256"
                 Click="failedButton_Click"  
                 HorizontalAlignment="Stretch"
@@ -102,12 +102,20 @@
             <Button
                 Margin="5,5,5,5"
                 Content="Double"
-                Height="128"
+                Height="100"
                 Width="256"
                 HorizontalAlignment="Stretch"
                 Click="doubleButton_Click"
                 Name="doubleButton" FontSize="28" />
-            
+            <Button
+                Margin="5,5,5,5"
+                Content="Set To Double Mode"
+                Height="100"
+                Width="256"
+                HorizontalAlignment="Stretch"
+                Click="modeButton_Click"
+                Name="modeButton" FontSize="24" />
+
 
         </StackPanel>
     </Grid>
