--- a/src/ElutionProfileTool/MainWindow.xaml
+++ b/src/ElutionProfileTool/MainWindow.xaml
@@ -6,124 +6,117 @@
         Height="901" 
         Width="1110"
         >
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" ></RowDefinition>
-            <RowDefinition Height="*" ></RowDefinition>
-            <RowDefinition Height="*" ></RowDefinition>
-            <RowDefinition Height="Auto" ></RowDefinition>
-        </Grid.RowDefinitions>
+    <TabControl>  
+        <TabItem>            
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto" ></RowDefinition>
+                    <RowDefinition Height="*" ></RowDefinition>
+                    <RowDefinition Height="*" ></RowDefinition>
+                    <RowDefinition Height="Auto" ></RowDefinition>
+                </Grid.RowDefinitions>
         
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*"></ColumnDefinition>
-            <ColumnDefinition Width="Auto"></ColumnDefinition>
-        </Grid.ColumnDefinitions>
-        <Label Grid.Row="4"
-               Height="48"
-               x:Name="m_spectraCount"
-               >
-            Total XIC's Graded = 0   / Novice 
-        </Label>
-        <TextBox Margin="5,4,5,6"
-            Name="textBox1" FontStretch="Normal" FontSize="28" 
-            Text="M:\data\proteomics\IQ-Api-Testing\226151_QC_Shew_11_02_pt5-b_6Jun11_Sphinx_11-03-27.xic" />
-        <Button 
-            Grid.Row="0"
-            Grid.Column="1"
-                Height="64"
-                Width="256"
-            Content=" View "
-            Margin="5,5,5,5"
-            Click="button_Click"
-            Name="button" FontSize="28" />
-        <WindowsFormsHost
-            Grid.Row="1"
-            Grid.Column="0"
-            >
-            <ma:ctlLineChart 
-                Title="Elution Profile"  
-                LegendVisible="False"
-                XAxisLabel="Scan"
-                YAxisLabel="Intensity"
-                x:Name="m_plot"/>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"></ColumnDefinition>
+                    <ColumnDefinition Width="Auto"></ColumnDefinition>
+                </Grid.ColumnDefinitions>
+                <Label Grid.Row="4"
+                       FontSize="24"
+                       Height="48"
+                       x:Name="m_expertLevelLabel">
+                       Expert Level: 
+                </Label>
+                <Label Grid.Row="4"
+                       Grid.Column="1"
+                       FontSize="24"
+                       Height="48"
+                       HorizontalContentAlignment="Center"
+                       x:Name="m_ratingCountLabel">
+                        0  XIC's Graded
+                </Label>
+                <TextBox Margin="5,4,5,6"
+                    Name="textBox1" FontStretch="Normal" FontSize="28" 
+                    Text="M:\data\proteomics\IQ-Api-Testing\226151_QC_Shew_11_02_pt5-b_6Jun11_Sphinx_11-03-27.xic" />
+                <Button 
+                    Grid.Row="0"
+                    Grid.Column="1"
+                        Height="64"
+                        Width="256"
+                    Content=" View "
+                    Margin="5,5,5,5"
+                    Click="button_Click"
+                    Name="button" FontSize="28" />
+                <Grid
+                    
+                        Grid.Row="1"
+                        Grid.Column="0"
+                        Grid.RowSpan="2"
+                    >
 
-        </WindowsFormsHost>
-        <WindowsFormsHost
-            Grid.Row="2"
-            Grid.Column="0"
-            >
-            <ma:ctlScatterChart 
-                Title="Elution Profile"  
-                LegendVisible="False"
-                XAxisLabel="Scan"
-                YAxisLabel="Intensity"
-                x:Name="m_plot2"/>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="*" ></RowDefinition>
+                        <RowDefinition Height="32" ></RowDefinition>
+                    </Grid.RowDefinitions>
+                    <Label
+                        HorizontalContentAlignment="Center"
+                        Grid.Row="1"    
+                        FontSize="18"
+                        >
+                       Scan Length = ""
+                    </Label>
+                    <WindowsFormsHost
+                        Grid.Row="0"
+                        >
+                        <ma:ctlLineChart 
+                            Title="Elution Profile"  
+                            LegendVisible="False"
+                            XAxisLabel="Scan"
+                            YAxisLabel="Intensity"
+                            x:Name="m_plot"/>
 
-        </WindowsFormsHost>
-        <StackPanel            
-            Margin="5,5,5,5"
-            Grid.Row="1"
-            Grid.RowSpan="2"
-            Grid.Column="1">
+                    </WindowsFormsHost>
+                </Grid>
+                <StackPanel            
+                    Margin="5,5,5,5"
+                    Grid.Row="1"
+                    Grid.RowSpan="2"
+                    Grid.Column="1">
+            
+                    <Button
+                        Content="Good - 1"
+                        Margin="5"
+                        HorizontalAlignment="Stretch"
+                        Height="48"
+                        Width="256"
+                        Click="OneButton_Click" 
+                        Name="OneButton" FontSize="28" />
+                    <Button
+                        Margin="5,5,5,5"
+                        Content="Ok - 2"
+                        Height="48"
+                        Width="256"
+                        Click="TwoButton_Click"  
+                        HorizontalAlignment="Stretch"
+                        Name="TwoButton" FontSize="28" />
+                    <Button
+                        Margin="5,5,5,5"
+                        Content="Poor- 3"
+                        Height="48"
+                        Width="256"
+                        Click="ThreeButton_Click" 
+                        HorizontalAlignment="Stretch"
+                        Name="ThreeButton" FontSize="28" />
+                    <Button
+                        Margin="5,5,5,5"
+                        Content="Multiple"
+                        Height="48"
+                        Width="256"
+                        HorizontalAlignment="Stretch"
+                        Click="FourButton_Click"
 
-            <Button
-                Content="Ideal - 0"
-                HorizontalAlignment="Stretch"
-                Height="48"
-                Width="256"
-                Click="ideaButton_Click"     
-                Name="ideaButton" FontSize="28" />
-            <Button
-                Content="Good - 1"
-                Margin="5"
-                HorizontalAlignment="Stretch"
-                Height="48"
-                Width="256"
-                Click="goodOneButton_Click" 
-                Name="goodOneButton" FontSize="28" />
-            <Button
-                Margin="5,5,5,5"
-                Content="Ok - 2"
-                Height="48"
-                Width="256"
-                Click="okButton_Click"  
-                HorizontalAlignment="Stretch"
-                Name="okButton" FontSize="28" />
-            <Button
-                Margin="5,5,5,5"
-                Content="Poor- 3"
-                Height="48"
-                Width="256"
-                Click="badButton_Click" 
-                HorizontalAlignment="Stretch"
-                Name="badButton" FontSize="28" />
-            <Button
-                Margin="5,5,5,5"
-                Content="Multiple"
-                Height="48"
-                Width="256"
-                HorizontalAlignment="Stretch"
-                Click="doubleButton_Click"
-                Name="doubleButton" FontSize="28" />
-            <Button
-                Margin="5,5,5,5"
-                Content="Set To Double Mode"
-                Height="48"
-                Width="256"
-                HorizontalAlignment="Stretch"
-                Click="modeButton_Click"
-                Name="modeButton" FontSize="24" />
-            <Button
-                Margin="5,5,5,5"
-                Content="Failed - 4"
-                Visibility="Hidden"
-                Height="48"
-                Width="256"
-                Click="failedButton_Click"  
-                HorizontalAlignment="Stretch"
-                Name="failedButton" FontSize="28"></Button>
-
-
-        </StackPanel>
-    </Grid>
+                        Name="FourButton" FontSize="28" />
+                </StackPanel>
+            </Grid>
+        </TabItem>
+    </TabControl>
 </Window>
